# X2Video

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  x2video.example.toml
Doc/: README.md
docs/: tts-config.md
docs/adr/: 0001-x-official-mcp-as-data-source.md  0002-card-narration-format-not-remix.md  0003-digest-is-target-single-tweet-is-n1.md  0004-python-cli-not-prompt-driven-agent.md  0005-ffmpeg-direct-render-not-jianying-draft.md  0006-no-auto-publish.md  0007-tts-default-edge-and-compatible-api.md  0008-grok-oauth-as-alternate-x-source.md
docs/agents/: domain.md  issue-tracker.md
tests/: conftest.py  test_auth_oauth.py  test_example.py  test_source_grok.py
x2video/: __main__.py
x2video/auth/: __init__.py  oauth.py  store.py
x2video/cli/: auth.py  card.py  curate.py  fetch.py  main.py  render.py  run.py  script.py
x2video/config/: loader.py  schema.py
x2video/llm/: api_impl.py  base.py  client.py
x2video/source/: __init__.py  base.py  factory.py  grok.py  models.py  x_mcp.py
x2video/tts/: api_impl.py  base.py  client.py  edge_impl.py
