[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2video"
version = "0.1.0"
description = "Fetch X/Twitter hot posts and synthesize vertical short videos."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "httpx>=0.27,<1",
    "edge-tts>=6.1,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.5,<1",
]

[project.scripts]
x2video = "x2video.cli.main:app"

[tool.setuptools.packages.find]
include = ["x2video*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
